--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [10, 12, 14, 16]
+        node: [12, 14, 16]
     runs-on: ${{ matrix.os }}
     name: Test Rules
     steps:
