--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     name: Publish to NPM
+    needs: test
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
