--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,6 +49,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
+          registry-url: "https://registry.npmjs.org"
       - name: Publish
         run: npm publish --access public
         env:
