--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,47 +1,13 @@
 name: Publishing
 
 on:
-  push:
-    branches:
-      - main
-  schedule:
-    - cron: "12 5 * * *"
+  release:
+    types: [published]
 
 jobs:
-  test:
-    strategy:
-      fail-fast: true
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        node: [12, 14, 16]
-    runs-on: ${{ matrix.os }}
-    name: Test Rules
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-      - name: Get npm cache directory
-        id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Install Node Modules
-        run: npm install
-      - name: Run Tests
-        run: npm test
   publish:
-    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     name: Publish to NPM
-    needs: test
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
