--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions/github-script@v4
         with:
           script: |
-            github.rest.repos.createRelease({
+            github.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: '${{ needs.test.outputs.current_version }}'
