--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Create Release
         uses: actions/github-script@v4
         with:
+          github-token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
           script: |
             github.repos.createRelease({
               owner: context.repo.owner,
