--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TSConfig for all OneZero Node.js projects",
   "main": "tsconfig.json",
   "scripts": {
+    "coverage": "nyc npm test",
     "test": "mocha -r ts-node/register spec/**/*.spec.ts --timeout 30000"
   },
   "repository": {
@@ -28,6 +29,7 @@
     "@types/node": "^15.12.2",
     "chai": "^4.3.4",
     "mocha": "^9.0.0",
+    "nyc": "^15.1.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
