--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "lib"
-  }
+    "outDir": "lib",
+  },
+  "include": ["types/deno.d.ts"]
 }
